--- a/landing-page.css
+++ b/landing-page.css
@@ -4,3 +4,39 @@
   margin-left: -8px;
   margin-top: -8px;
 }
+
+.title{
+  color:white;
+  font-size: 80px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-align: center;
+  margin-top: 200px;
+}
+
+.header{
+  color: white;
+  font-size: 50px;
+  text-align: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.hook{
+  color: white;
+  font-size: 40px;
+  margin-top: 0px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-align: center;
+
+}
+
+.sign-up button{
+  width: 300px;
+  height: 100px;
+  border-radius: 10px;
+  border: none;
+  background-color: rgb(236, 114, 216);
+  color: white;
+  font-size: 30px;
+  margin-top: 50px;
+  margin-left: 45%;
+}
