--- a/landing-page.css
+++ b/landing-page.css
@@ -39,4 +39,22 @@
   font-size: 30px;
   margin-top: 50px;
   margin-left: 45%;
+  
+}
+
+.sign-up button:hover{
+  animation-name: change;
+  animation-duration: 0.5s;
+
+}
+
+
+
+@keyframes change {
+  0%{background-color:rgb(236, 114, 216); transform: rotateX(0deg);}
+  25%{background-color:#82A284;transform: rotateX(-15deg);}
+  50%{background-color:#446A46;transform: rotateX(15deg);}
+  75%{background-color: #82A284;transform: rotateX(15deg);}
+  100%{background-color:rgb(236, 114, 216);transform: rotateX(-15deg);}
+ 
 }
