--- a/landing-page.css
+++ b/landing-page.css
@@ -1,35 +1,34 @@
-.menu{
+.menu {
   border: none;
   background-color: none;
   margin-left: -8px;
   margin-top: -8px;
 }
 
-.title{
-  color:white;
+.title {
+  color: white;
   font-size: 80px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   text-align: center;
   margin-top: 200px;
 }
 
-.header{
+.header {
   color: white;
   font-size: 50px;
   text-align: center;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-.hook{
+.hook {
   color: white;
   font-size: 40px;
   margin-top: 0px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   text-align: center;
-
 }
 
-.sign-up button{
+.sign-up button {
   width: 300px;
   height: 100px;
   border-radius: 10px;
@@ -39,22 +38,62 @@
   font-size: 30px;
   margin-top: 50px;
   margin-left: 45%;
-  
 }
 
-.sign-up button:hover{
+.sign-up button:hover {
   animation-name: change;
   animation-duration: 0.5s;
-
 }
-
-
 
 @keyframes change {
-  0%{background-color:rgb(236, 114, 216); transform: rotateX(0deg);}
-  25%{background-color:#82A284;transform: rotateX(-15deg);}
-  50%{background-color:#446A46;transform: rotateX(15deg);}
-  75%{background-color: #82A284;transform: rotateX(15deg);}
-  100%{background-color:rgb(236, 114, 216);transform: rotateX(-15deg);}
- 
+  0% {
+    background-color: rgb(236, 114, 216);
+    transform: rotateX(0deg);
+  }
+  25% {
+    background-color: #82a284;
+    transform: rotateX(-15deg);
+  }
+  50% {
+    background-color: #446a46;
+    transform: rotateX(15deg);
+  }
+  75% {
+    background-color: #82a284;
+    transform: rotateX(15deg);
+  }
+  100% {
+    background-color: rgb(236, 114, 216);
+    transform: rotateX(-15deg);
+  }
 }
+
+.sign-up {
+  position: relative;
+}
+
+.form .main {
+  position: absolute;
+  background-color: aliceblue;
+  padding: 20px;
+}
+
+.a,
+.b,
+.c,
+.d {
+  width: 400px;
+  height: 35px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 25px;
+  border-radius: 30px;
+}
+
+.main ::placeholder {
+  padding-left: 20px;
+}
+
+.main{
+  border-radius: 10px;
+}
+/*move .form to the sign up area and program to hide the form and reveal it when Sign up is clicked*/
